Corrige le bug des accroches invisibles

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,10 +7,9 @@
 /**
  * Style pour le titre et l'accroche
  */
-h1 {font-size:130%;}
-h2 {font-size:100%; padding:0 0 5px 20px; border-left:2px solid #66bbe0}
-h2:empty {display:none}
-
+hgroup h1 {font-size:130%;}
+hgroup h2 {font-size:100%; padding:0 0 5px 20px; border-left:2px solid #66bbe0}
+hgroup h2:empty {padding:0;}
 /**
  * Style pour l'auteur et la date de parution
  */
